name:                haskell-tic-tac-toe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/johnhaley81/haskell-tic-tac-toe#readme
license:             BSD3
license-file:        LICENSE
author:              John Haley
maintainer:          john@haley.io
copyright:           2017 John Haley
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GameState
                     , Utils
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-tic-tac-toe-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-tic-tac-toe
  default-language:    Haskell2010

test-suite haskell-tic-tac-toe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-tic-tac-toe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/johnhaley81/haskell-tic-tac-toe
